# Carillon

./: Makefile  README.rst  pyproject.toml
src/permutations/: __init__.py
